# optima

./: .dockerignore  .env  .gitattributes  .gitignore  COMMANDS.md  Cargo.toml  DEVLOG.md  FAQ.md  INSTALL.md  PLAYING: 5000000  README.md  bad_eval_pos.txt  c4_model.py  c4_model_2.py  client.example.conf  create.Dockerfile  create_model.py  env.list  model_export.py  model_sen.py  models.config  quoridor_notebook.ipynb  results.txt  rust-toolchain  test-ascii-wall  test_7.py  the_perfect_game.txt  train.Dockerfile  train.py  train.sh  train_model.py
.cargo/: config.toml
arena/: Cargo.toml
arena/src/: championship.rs  constants.rs  evaluate.rs  evaluate_persistance.rs  lib.rs  options.rs
arimaa/: Cargo.toml
arimaa/src/: action.rs  bits.rs  board.rs  constants.rs  display.rs  engine.rs  game_state.rs  lib.rs  mappings.rs  model.rs  model_factory.rs  place_mappings.rs  place_model.rs  play_mappings.rs  play_model.rs  predictions.rs  selection_strategy.rs  symmetries.rs  time_strategy.rs  trajectory_terminal.rs  transposition_entry.rs  ugi.rs  value.rs  zobrist.rs  zobrist_values.rs
assets/: reinforcement-loop.excalidraw
client/: Cargo.toml  build.rs
client/src/: cli.rs  game.rs  main.rs
collections/: Cargo.toml  RCUAppendBuffer.md
collections/benches/: in_place_max_heap.rs  rcu_append_buffer.rs
collections/src/: in_place_max_heap.rs  lib.rs
collections/tests/: in_place_max_heap.rs  rcu_append_buffer_get.rs  rcu_append_buffer_stress.rs
common/: Cargo.toml
common/src/: bits.rs  chunk_queue.rs  config.rs  cpuct.rs  env.rs  fs.rs  game_action.rs  incrementing_map.rs  info_fields.rs  lib.rs  linked_list.rs  math.rs  moves_left.rs  once_cell_async.rs  player_to_move.rs  propagated_value_traits.rs  propagated_values.rs  runtime.rs  softmax.rs  transposition.rs  value.rs  victory_margin.rs  wait_for.rs
connect4/: Cargo.toml
connect4/src/: action.rs  board.rs  constants.rs  engine.rs  game_state.rs  lib.rs  mappings.rs  model.rs  model_factory.rs  paths.rs  prediction.rs  predictions.rs  selection_strategy.rs  symmetries.rs  transposition_entry.rs  ugi.rs  value.rs  zobrist.rs  zobrist_values.rs
docker/: arimaa_input_validator.py  c4_model.py  create.Dockerfile  create_model.py  fit.py  get_gradient_norm.py  metric.py  model_sen.py  policy_head.py  reset_layers.py  split_file_data_generator.py  tensorboard_enriched.py  train.Dockerfile  train_model.py  (+1 more)
mcts/: Cargo.toml
mcts/src/: backpropagation_strategy.rs  constants.rs  counting_game.rs  cpuct.rs  edge.rs  lib.rs  mcts.rs  mcts_tests.rs  moves_left_selection_strategy.rs  moves_left_strategy.rs  node.rs  node_details.rs  options.rs  puct_mcts.rs  puct_mcts_tests.rs  selection_strategy.rs  temp.rs
model/: Cargo.toml
model/src/: analytics.rs  conv_input_builder.rs  lib.rs  logits.rs  model.rs  model_info.rs  node_metrics.rs  position_metrics.rs
model/src/analysis_cache/: mod.rs
model/src/analysis_cache_queue/: mod.rs
model/src/archive/: archive.rs
model/src/tensorflow/: archive.rs  constants.rs  create.rs  get_latest_model_info.rs  half.rs  mod.rs  mode.rs  model.rs  model_options.rs  paths.rs  reporter.rs  run_cmd.rs  train.rs  transposition_table.rs
model/src/tensorflow_serving/: constants.rs  get_latest_model_info.rs  mod.rs  model.rs
model_py/: fit.py  (+13 more)
play/: Cargo.toml
play/src/: play.rs
puct/: Cargo.toml
puct/benches/: edge_store.rs  in_place_max_heap.rs
puct/src/: after_state.rs  analysis_coordinator.rs  backprop.rs  backpropagation_strategy.rs  borrowed_or_owned.rs  edge.rs  edge_store.rs  in_place_max_heap.rs  lib.rs  moves_left.rs  node.rs  node_arena.rs  node_details.rs  node_graph.rs  node_graph_store.rs  options.rs  probe.rs  prune.rs  puct.rs  puct_mcts.rs  rollup.rs  scorer_selection_policy.rs  search_context.rs  selection_policy.rs  selection_result.rs  selection_strategy.rs  simulate.rs  snapshot_mapper.rs  terminal_node.rs  value_model.rs  victory_margin.rs
puct/src/after_state/: tests.rs
puct/src/backprop/: tests.rs
puct/src/moves_left/: tests.rs
puct/src/node/: tests.rs
puct/src/node_graph/: tests.rs
puct/src/node_graph_store/: tests.rs
puct/src/prune/: tests.rs
puct/src/victory_margin/: tests.rs
puct/tests/: puct_e2e.rs  visit_accounting.rs
quoridor/: Cargo.toml
quoridor/src/: action.rs  analytics.rs  bits.rs  board.rs  constants.rs  coordinate.rs  display.rs  engine.rs  game_state.rs  game_state_test.rs  lib.rs  mappings.rs  model.rs  model_factory.rs  predictions.rs  propagated_values.rs  selection_strategy.rs  serde.rs  symmetries.rs  trajectory_terminal.rs  transposition_entry.rs  ugi.rs  value.rs  zobrist.rs  zobrist_values.rs
replay-buffer/: Cargo.toml  build.rs  test.py
replay-buffer/src/: arimaa_sampler.rs  connect4_sampler.rs  deblunder.rs  deblunder_test.rs  dir_index.rs  game.rs  index.rs  lib.rs  q_mix.rs  quoridor_sampler.rs  sample.rs  sample_file.rs
self-evaluate/: Cargo.toml
self-evaluate-client/: Cargo.toml
self-evaluate-client/src/: main.rs
self-evaluate/src/: constants.rs  lib.rs  main.rs  self_evaluate.rs  self_evaluate_persistance.rs
self-learn/: Cargo.toml
self-learn-client/: Cargo.toml
self-learn-client/src/: cli.yml  main.rs
self-learn/src/: constants.rs  lib.rs  self_learn.rs  self_play.rs  self_play_persistance.rs  train.rs
self-play/: Cargo.toml
self-play/src/: lib.rs  options.rs  play_self_one.rs  self_play.rs  self_play_metrics.rs  self_play_persistance.rs
tensorflow-model/: Cargo.toml
tensorflow-model/benches/: benchmark.rs
tensorflow-model/src/: lib.rs
tensorflow-model/src/archive/: archiver.rs  mod.rs
tensorflow-model/src/tensorflow/: channel.rs  constants.rs  get_latest_model_info.rs  latest.rs  mod.rs  model.rs  paths.rs  predictor.rs  reporter.rs  tensor_pool.rs  traits.rs  transposition_entry.rs  transposition_table.rs
tournament/: Cargo.toml
tournament/src/: constants.rs  lib.rs  tournament.rs  tournament_persistance.rs
ugi/: Cargo.toml  README.md
ugi/src/: game_manager.rs  input_parser.rs  lib.rs  options.rs  output.rs  perft.rs  run_ugi.rs  time_strategy.rs  ugi.rs
(+60 files in other folders)
