[workspace]

members = [
    "client",
    "common",
    "engine",
    "model",
    "mcts",
    # "play",
    "replay-buffer",
    # "self-evaluate",
    "self-play",
    # "tournament",
    # "tuner",

    "arimaa",
    "connect4",
    "quoridor"
]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
