[workspace]
resolver = "2"

members = [
    "arena",
    "collections",
    "client",
    "common",
    "engine",
    "ugi",
    "model",
    "puct",
    "play",
    "replay-buffer",
    "self-play",

    "arimaa",
    "connect4",
    "quoridor",
]

[workspace.package]
edition = "2024"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
