[package]
name = "arena"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition.workspace = true
publish = false

[dependencies]
connect4 = { path = "../connect4" }
quoridor = { path = "../quoridor" }
engine = { path = "../engine" }
common = { path = "../common" }
model = { path = "../model" }
mcts = { path = "../mcts" }
puct = { path = "../puct" }

anyhow = "1.0"
log = "0.4"
permutohedron = "0.2"
crossbeam = "0.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.12"
futures = "0.3"
tokio = { version = "1.37", features = ["parking_lot"] }
