[package]
name = "arimaa"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "arimaa"

[dependencies]
common = { path = "../common" }
engine = { path = "../engine" }
model = { path = "../model" }
arimaa-engine = { path = "../../arimaa-engine/arimaa-engine" }

anyhow = "1.0"
half = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10"
regex = "1.3"
futures = "0.3"
log = "0.4"
once_cell = "1.10"
