[package]
name = "arimaa"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition = "2021"
publish = false

[lib]
name = "arimaa"

[features]
default = ["all"]
all = ["mappings", "model"]
mappings = [
    "tensorflow-model/traits",
    "dep:anyhow",
    "dep:half",
    "dep:once_cell",
    "dep:serde",
    "dep:tinyvec",
]
model = [
    "tensorflow-model/all",
    "dep:anyhow",
    "dep:half",
    "dep:serde",
    "dep:serde_json",
    "dep:itertools",
    "dep:regex",
    "dep:futures",
    "dep:log",
    "dep:once_cell",
    "dep:tar",
    "dep:tempfile",
    "dep:tinyvec",
]

[dev-dependencies]
criterion = "0.5"

# [[bench]]
# name = "my_benchmark"
# harness = false

[dependencies]
common = { path = "../common" }
engine = { path = "../engine" }
model = { path = "../model" }
tensorflow-model = { path = "../tensorflow-model", default-features = false, features = [
] }
arimaa-engine = { path = "../../arimaa-engine/arimaa-engine" }

anyhow = { version = "1.0", optional = true }
flate2 = { version = "1.0" }
half = { version = "1.8", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
itertools = { version = "0.10", optional = true }
regex = { version = "1.3", optional = true }
futures = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
once_cell = { version = "1.10", optional = true }
tar = { version = "0.4.38", optional = true }
tempfile = { version = "3.3.0", optional = true }
tinyvec = { version = "1.2", optional = true }
