[package]
name = "arimaa"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition.workspace = true
publish = false

[lib]
name = "arimaa"

[features]
default = ["model"]
model = [
    "tensorflow-model/all",
    "dep:futures",
    "dep:regex",
    "dep:tar",
    "dep:tempfile",
]

[dev-dependencies]
criterion = "0.5"

# [[bench]]
# name = "my_benchmark"
# harness = false

[dependencies]
common = { path = "../common" }
engine = { path = "../engine" }
model = { path = "../model" }
tensorflow-model = { path = "../tensorflow-model", default-features = false, features = [
    "traits",
] }
arimaa-engine = { path = "../../arimaa-engine" }
mcts = { path = "../mcts" }
ugi = { path = "../ugi" }

anyhow = "1.0"
flate2 = "1.0"
half = "1.8"
itertools = "0.14"
log = "0.4"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tinyvec = "1.2"

futures = { version = "0.3", optional = true }
regex = { version = "1.3", optional = true }
tar = { version = "0.4.38", optional = true }
tempfile = { version = "3.3.0", optional = true }
