[package]
name = "client"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition.workspace = true
publish = false

[features]
default = ["quoridor"]
quoridor = ["dep:quoridor"]
arimaa = ["dep:arimaa", "arimaa/model"]
connect4 = ["dep:connect4", "connect4/model"]

[dependencies]
self-play = { path = "../self-play" }
model = { path = "../model" }
arimaa = { path = "../arimaa", optional = true }
common = { path = "../common" }
puct = { path = "../puct" }
arena = { path = "../arena" }
connect4 = { path = "../connect4", optional = true }
quoridor = { path = "../quoridor", optional = true }
ugi = { path = "../ugi" }

anyhow = "1.0"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = [
    "parking_lot",
    "macros",
    "rt-multi-thread",
] }
