[package]
name = "collections"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
parking_lot = "0.12"
arc-swap = "1.8.1"

[dev-dependencies]
criterion = "0.5"
append-only-vec = "0.1.8"
model = { path = "../model" }
half = "1.8"

[[bench]]
name = "rcu_append_buffer"
harness = false

[[bench]]
name = "in_place_max_heap"
harness = false
