[package]
name = "common"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition.workspace = true
publish = false

[lib]
name = "common"

[dependencies]
anyhow = "1.0"
assert_approx_eq = "1.1"
hocon = "0.9"
log = { version = "0.4" }
parking_lot = { version = "0.12" }
serde = { version = "1.0", features = ["derive"] }
