[package]
name = "connect4"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "connect4"

[dependencies]
common = { path = "../common" }
engine = { path = "../engine" }
model = { path = "../model" }

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
half = "1.8"
