[package]
name = "mcts"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "mcts"

[dependencies]
engine = { path = "../engine" }
common = { path = "../common" }
model = { path = "../model" }

anyhow = "1.0"
rand = "0.8"
rand_distr = "0.4"
tokio = { version = "0.2", features = ["parking_lot", "macros"] }
async-std = "1.6"
futures = "0.3"
generational-arena = "0.2"
assert_approx_eq = "1.1"
log = "0.4"
futures-intrusive = "0.4"
