[package]
name = "mcts"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition = "2021"
publish = false

[lib]
name = "mcts"

[dependencies]
engine = { path = "../engine" }
common = { path = "../common" }
model = { path = "../model" }

anyhow = "1.0"
itertools = "0.12"
rand = "0.8"
rand_distr = "0.4"
tokio = { version = "1.36", features = ["parking_lot", "macros"] }
async-std = "1.12"
futures = "0.3"
generational-arena = "0.2"
assert_approx_eq = "1.1"
log = "0.4"
futures-intrusive = "0.5"
half = "1.8"
