[package]
name = "model"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "model"

[dependencies]
common = { path = "../common" }
engine = { path = "../engine" }

anyhow = "1.0"
crossbeam = "0.8"
half = "1.6"
itertools = "0.10"
log = "0.4"
npy = "0.4"
parking_lot = "0.11"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tensorflow = { version = "0.17", features = ["tensorflow_gpu"] }
tokio = { version = "0.2", features = ["parking_lot", "sync", "blocking", "rt-threaded", "time"] }
pin-project ="1.0"
