[package]
name = "model"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "model"

[dependencies]
common = { path = "../common" }
engine = { path = "../engine" }

anyhow = "1.0"
crossbeam = "0.8"
flate2 = "1.0"
half = "1.8"
itertools = "0.10"
log = "0.4"
npy = "0.4"
parking_lot = "0.12"
pin-project ="1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.38"
tempfile = "3.3.0"
tensorflow = { version = "0.18", features = ["tensorflow_gpu"] }
tokio = { version = "1.18", features = ["parking_lot", "sync", "rt", "rt-multi-thread", "time"] }
