[package]
name = "model"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition.workspace = true
publish = false

[lib]
name = "model"

[dependencies]
common = { path = "../common" }
engine = { path = "../engine" }

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
half = "1.8"
