[package]
name = "play"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
engine = { path = "../engine" }
common = { path = "../common" }
model = { path = "../model" }
mcts = { path = "../mcts" }

anyhow = "1.0"
log = "0.4"
crossbeam = "0.7"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.2"
futures = "0.3"