[package]
name = "play"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition.workspace = true
publish = false

[dependencies]
engine = { path = "../engine" }
common = { path = "../common" }
model = { path = "../model" }
puct = { path = "../puct" }

anyhow = "1.0"
log = "0.4"
crossbeam = "0.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["parking_lot"] }
futures = "0.3"
