[package]
name = "puct"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition.workspace = true
publish = false

[lib]
name = "puct"

[dependencies]
engine = { path = "../engine" }
common = { path = "../common" }
model = { path = "../model" }

anyhow = "1.0"
itertools = "0.12"
rand = "0.8"
rand_distr = "0.4"
assert_approx_eq = "1.1"
log = "0.4"
half = "1.8"
rayon = "1.11"
crossbeam = "0.8"
crossbeam-queue = "0.3"
tinyvec = { version = "1.10", features = ["alloc"] }
append-only-vec = "0.1.8"
dashmap = { version = "6.1.0", features = ["inline"] }
parking_lot = "0.12"

[features]
bench = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "in_place_max_heap"
harness = false
