[package]
name = "quoridor"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition = "2018"
publish = false

[lib]
name="quoridor"

[dependencies]
common = { path = "../common" }
engine = { path = "../engine" }
model = { path = "../model" }

failure="0.1"
serde={version="1.0.95",features=["derive"]}
serde_json="1.0"
