[package]
name = "quoridor"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition.workspace = true
publish = false

[lib]
name = "quoridor"

[features]
default = ["all"]
all = ["mappings", "model"]
mappings = ["tensorflow-model/traits"]
model = ["tensorflow-model/all"]

[dependencies]
common = { path = "../common" }
engine = { path = "../engine" }
model = { path = "../model" }
ugi = { path = "../ugi" }
mcts = { path = "../mcts" }
tensorflow-model = { path = "../tensorflow-model", default-features = false, features = [
] }

anyhow = "1.0"
half = "1.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.12"
assert_approx_eq = "1.1"
regex = "1.10.4"
