[package]
name = "replay_buffer"
version = "0.1.0"
edition.workspace = true

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "replay_buffer"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[features]
default = ["quoridor"]
quoridor = ["dep:quoridor"]
arimaa = []
connect4 = ["dep:connect4"]

[dependencies]
engine = { path = "../engine" }
model = { path = "../model" }
common = { path = "../common" }
tensorflow-model = { path = "../tensorflow-model", default-features = false, features = [
    "traits",
] }
self-play = { path = "../self-play", default-features = false, features = [
    "traits",
] }
arimaa = { path = "../arimaa" }
quoridor = { path = "../quoridor", default-features = false, features = [
    "mappings",
], optional = true }
connect4 = { path = "../connect4", optional = true }

anyhow = "1.0.57"
approx = "0.5.1"
bytemuck = "1.9.1"
byteorder = "1.4.3"
env_logger = "0.11.0"
flate2 = "1.0"
half = "1.8"
log = "0.4.17"
lz4 = "1.23.3"
npy = "0.4"
numpy = "0.24.0"
pyo3 = { version = "0.24.1", features = ["extension-module"] }
rand = "0.8"
rayon = "1.5.3"
serde = "1.0"
serde_json = "1.0"
