[package]
name = "self-evaluate-client"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
connect4 = { path = "../connect4" }
quoridor = { path = "../quoridor" }
model = { path = "../model" }
self-evaluate = { path = "../self-evaluate" }

failure="0.1"