[package]
name = "self-learn-client"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
self-learn = { path = "../self-learn" }
self-evaluate = { path = "../self-evaluate" }
play = { path = "../play" }
tournament = { path = "../tournament" }
model = { path = "../model" }
arimaa = { path = "../arimaa" }
connect4 = { path = "../connect4" }
quoridor = { path = "../quoridor" }

failure="0.1"
serde_json="1.0"
serde={version="1.0.95",features=["derive"]}
clap={version="2.33",features=["yaml"]}
tokio = "=0.2.0-alpha.6"