[package]
name = "self-learn-client"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
self-learn = { path = "../self-learn" }
self-evaluate = { path = "../self-evaluate" }
play = { path = "../play" }
tournament = { path = "../tournament" }
tuner = { path = "../tuner" }
model = { path = "../model" }
arimaa = { path = "../arimaa" }
connect4 = { path = "../connect4" }
quoridor = { path = "../quoridor" }

anyhow = "1.0"
log = "0.4"
env_logger = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "2.33", features = ["yaml"] }
tokio = { version = "0.2", features = ["parking_lot", "macros"] }