[package]
name = "self-learn"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
engine = { path = "../engine" }
common = { path = "../common" }
model = { path = "../model" }
mcts = { path = "../mcts" }
self-evaluate = { path = "../self-evaluate" }

failure="0.1"
crossbeam="0.7"
rand="0.7"
uuid={version="0.7",features=["v4"]}
serde={version="1.0",features=["derive"]}
serde_json="1.0"
futures-preview = "=0.3.0-alpha.17"
tokio = "=0.2.0-alpha.1"
tokio-current-thread = "=0.2.0-alpha.1"