[package]
name = "self-play"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
engine = { path = "../engine" }
common = { path = "../common" }
model = { path = "../model" }
mcts = { path = "../mcts" }
arimaa-engine = { path = "../../arimaa-engine/arimaa-engine" }

anyhow = "1.0"
async-scoped = { version = "0.7", features = ["use-tokio"] }
bson = "2.2.0"
crossbeam = "0.8"
flate2 = "1.0"
futures = "0.3"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1.1", features = ["v4"] }
uuid-b64 = "0.1.1"
tokio = { version = "1.18", features = ["parking_lot", "rt-multi-thread"] }