[package]
name = "self-play"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition.workspace = true
publish = false

[features]
default = ["all"]
all = [
    "traits",
    "dep:engine",
    "dep:common",
    "dep:mcts",
    "dep:anyhow",
    "dep:async-scoped",
    "dep:bson",
    "dep:crossbeam",
    "dep:flate2",
    "dep:futures",
    "dep:log",
    "dep:rand",
    "dep:serde_json",
    "dep:uuid",
    "dep:uuid-b64",
    "dep:tokio",
]
traits = []

[dependencies]
engine = { path = "../engine", optional = true }
common = { path = "../common", optional = true }
model = { path = "../model" }
mcts = { path = "../mcts", optional = true }

anyhow = { version = "1.0", optional = true }
async-scoped = { version = "0.8", features = ["use-tokio"], optional = true }
bson = { version = "2.2.0", optional = true }
crossbeam = { version = "0.8", optional = true }
flate2 = { version = "1.0", optional = true }
futures = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
rand = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
uuid = { version = "1.1.1", features = ["v4"], optional = true }
uuid-b64 = { version = "0.1.1", optional = true }
tokio = { version = "1.37", features = [
    "parking_lot",
    "rt-multi-thread",
], optional = true }
