[package]
name = "self-play"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition.workspace = true
publish = false

[features]
default = ["all"]
all = [
    "traits",
    "dep:engine",
    "dep:common",
    "dep:puct",
    "dep:anyhow",
    "dep:bson",
    "dep:crossbeam",
    "dep:flate2",
    "dep:log",
    "dep:rand",
    "dep:serde_json",
    "dep:uuid",
    "dep:uuid-b64",
]
traits = []

[dependencies]
engine = { path = "../engine", optional = true }
common = { path = "../common", optional = true }
model = { path = "../model" }
puct = { path = "../puct", optional = true }

anyhow = { version = "1.0", optional = true }
bson = { version = "2.2.0", optional = true }
crossbeam = { version = "0.8", optional = true }
flate2 = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
rand = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
uuid = { version = "1.1.1", features = ["v4"], optional = true }
uuid-b64 = { version = "0.1.1", optional = true }
