[package]
name = "tensorflow-model"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition.workspace = true
publish = false

[features]
default = ["all"]
all = ["dep:tensorflow"]
traits = []
tensorflow_system_alloc = []

[dev-dependencies]
criterion = "0.3"
arimaa-engine = { path = "../../arimaa-engine" }
arimaa = { path = "../arimaa" }

[dependencies]
common = { path = "../common" }
engine = { path = "../engine" }
model = { path = "../model" }

anyhow = { version = "1.0" }
crossbeam = { version = "0.8" }
dashmap = { version = "6.1" }
flate2 = { version = "1.0" }
half = { version = "1.8" }
itertools = { version = "0.12" }
log = { version = "0.4" }
parking_lot = { version = "0.12" }
pin-project = { version = "1.0" }
rand = { version = "0.9" }
rayon = { version = "1.5" }
retry = { version = "1.3" }
smallvec = { version = "1.15" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tar = { version = "0.4.38" }
tempfile = { version = "3.3.0" }
tensorflow = { version = "0.18", features = [
    "tensorflow_gpu",
], optional = true }
tokio = { version = "1.37", features = [
    "parking_lot",
    "sync",
    "rt",
    "rt-multi-thread",
    "time",
] }

[[bench]]
name = "benchmark"
harness = false
