[package]
name = "tournament"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
connect4 = { path = "../connect4" }
quoridor = { path = "../quoridor" }
engine = { path = "../engine" }
common = { path = "../common" }
model = { path = "../model" }
mcts = { path = "../mcts" }

failure="0.1"
crossbeam="0.7.1"
rand="0.7.0"
serde={version="1.0.95",features=["derive"]}
serde_json="1.0"
itertools="0.8.2"
futures-preview = "=0.3.0-alpha.19"
tokio-executor = "=0.2.0-alpha.6"