[package]
name = "tournament"
version = "0.1.0"
authors = ["James Harmon <JamesMHarmon@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
connect4 = { path = "../connect4" }
quoridor = { path = "../quoridor" }
engine = { path = "../engine" }
common = { path = "../common" }
model = { path = "../model" }
mcts = { path = "../mcts" }

anyhow = "1.0"
log = "0.4"
crossbeam = "0.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10"
futures = "0.3"
tokio = { version = "1.36", features = ["parking_lot"] }
